added about pages

--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -11,10 +11,20 @@
       <li class="list-group-item">
         Django
       </li>
+      <li class="list-group-item">
+        SQL
+      </li>
+      <li class="list-group-item">
+        И ещё много всего интересного
+      </li>
     </ul>
   </aside>
   <article class="col-12 col-md-9">
-    <p>Текст страницы "Технологии"</p>
+    <p>
+      Этот проект был написан при помощи фреймворка django.<br>
+      Скоро тут будет информация про API для нашего проекта, будем ждать
+      вместе.
+    </p>
   </article>
 </div>
 {% endblock %}
