--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -26,14 +26,13 @@
             {% endif %}" href="{% url 'posts:post_create' %}">Новая запись</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link-light" href="<!--  -->">Изменить пароль</a>
+            <a class="nav-link"
+               href="{% url 'posts:profile' user.username %}">
+               Мой профиль</a>
           </li>
           <li class="nav-item">
             <a class="nav-link link-light"
                href="{% url 'users:logout' %}">Выйти</a>
-          </li>
-          <li>
-            Пользователь: {{ user.username }}
           </li>
         {% else %}
           <li class="nav-item">
