--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -26,9 +26,15 @@
             {% endif %}" href="{% url 'posts:post_create' %}">Новая запись</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"
-               href="{% url 'posts:profile' user.username %}">
-               Мой профиль</a>
+            <a
+              class="
+                nav-link
+                {% if view_name == 'posts:profile' and is_author %}
+                  active
+                {% endif %}
+              " href="{% url 'posts:profile' user.username %}">
+              Мой профиль
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link link-light"
